[tool.poetry]
name = "instrumentdb"
version = "3.1.0"
description = ""
authors = ["Maurizio Tomasi <ziotom78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.29"
markdown = "^3.2.1"
pygments = "^2.20.0"
djangorestframework = "^3.15.2"
django-filter = "^2.2.0"
pyyaml = "^6.0.0"
django-mptt = "^0.14.0"
drf-yasg = "^1.21.7"
gitpython = "^3.1.41"
envparse = "^0.2.0"
sphinx = "^8.0.4"
django-sslserver = "^0.22"
Pillow = "^12.1.1"
pytz = "^2025.2"
coverage = "^7.2.7"
flake8 = "^7.3.0"
black = "^26.3.1"
django-cleanup = "^8.0.0"
django-active-link = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^9.0"
pytest-django = "^4.5"

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"
